--- a/index.html
+++ b/index.html
@@ -3,35 +3,110 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Twój Bot na Twitchu</title>
+<title>ChatAdvert - Twoja Interakcja, Naszą Pasją</title>
 <link rel="stylesheet" href="styles.css">
+<style>
+  body {
+    font-family: 'Arial', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+  }
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 1rem 0;
+    text-align: center;
+  }
+  nav ul {
+    list-style: none;
+    padding: 0;
+  }
+  nav ul li {
+    display: inline;
+    margin-right: 20px;
+  }
+  nav a {
+    text-decoration: none;
+    color: #fff;
+  }
+  main {
+    padding: 2rem;
+  }
+  footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+  }
+  .container {
+    max-width: 1200px;
+    margin: auto;
+    overflow: auto;
+  }
+  .card {
+    background: #fff;
+    margin-bottom: 2rem;
+    padding: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  .card h3 {
+    color: #333;
+  }
+</style>
 </head>
 <body>
 <header>
-  <h1>Twój Bot na Twitchu</h1>
-  <nav>
+  <div class="container">
+    <h1>ChatAdvert - Rozwiń Swój Stream z Nami</h1>
+  </div>
+</header>
+
+<nav>
+  <div class="container">
     <ul>
       <li><a href="index.html">Strona główna</a></li>
       <li><a href="riddles.html">Zagadki</a></li>
     </ul>
-  </nav>
-</header>
+  </div>
+</nav>
 
 <main>
-  <section>
-    <h2>Funkcje Bota</h2>
-    <p>Tutaj znajdziesz opis funkcji naszego bota.</p>
-    <ul>
-      <li>Komendy czatu: !points, !riddle, !daily, !shop, etc.</li>
-      <li>Zagadki z różnych kategorii</li>
-      <li>System punktów dla widzów</li>
-      <li>Daily rewards dla regularnych użytkowników</li>
-    </ul>
-  </section>
+  <div class="container">
+    <section class="card">
+      <h2>Odkryj Możliwości Bota ChatAdvert</h2>
+      <p>ChatAdvert to innowacyjne rozwiązanie dla streamerów Twitch, które ułatwia interakcję z publicznością i automatyzuje zarządzanie czatem. Nasz bot wykorzystuje zaawansowane algorytmy, aby zapewnić niezapomniane doświadczenia dla Ciebie i Twoich widzów.</p>
+    </section>
+
+    <section class="card">
+      <h3>Komendy Czatu</h3>
+      <p>Uprość zarządzanie Twoim kanałem dzięki intuicyjnym komendom czatu. Pozwól widzom sprawdzić swoje punkty, użyć komendy zagadki lub odebrać codzienne nagrody - wszystko za pomocą prostych komend tekstowych.</p>
+    </section>
+
+    <section class="card">
+      <h3>Interaktywne Zagadki</h3>
+      <p>Zaangażuj swoich widzów dzięki różnorodnym zagadkom, które mogą rozwiązywać na żywo. Z kategorii takich jak gry, geografia, muzyka, filmy i wiele innych, każdy znajdzie coś dla siebie.</p>
+    </section>
+
+    <section class="card">
+      <h3>System Punktów</h3>
+      <p>Nagradzaj swoich widzów za ich aktywność i lojalność. Punkty mogą być wymieniane na ekskluzywne nagrody lub ulepszenia na czacie.</p>
+    </section>
+
+    <section class="card">
+      <h3>Codzienna Nagroda</h3>
+      <p>Stały dopływ nagród utrzymuje widzów w stałym zaangażowaniu. Codzienna nagroda to doskonały sposób na utrzymanie stałej interakcji.</p>
+    </section>
+  </div>
 </main>
 
 <footer>
-  <p>&copy; 2023 ChatAdvert. Wszelkie prawa zastrzeżone.</p>
+  <div class="container">
+    <p>&copy; 2023 ChatAdvert. Wszystkie prawa zastrzeżone. Zbuduj swoją społeczność razem z nami.</p>
+  </div>
 </footer>
 </body>
 </html>
