--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
     <h1>ChatAdvert - Rozwiń Swój Stream z Nami</h1>
   </div>
 </header>
-
 <nav>
   <div class="container">
     <ul>
       <li><a href="index.html">Strona główna</a></li>
-      <li><a href="riddles.html">Zagadki</a></li>
+      <li><a href="categories.html">Kategorie</a></li> <!-- Nowa zakładka -->
     </ul>
   </div>
 </nav>
