--- a/categories.html
+++ b/categories.html
@@ -8,41 +8,58 @@
 </head>
 <body>
 <header>
-  <div class="container">
-    <h1>Kategorie Zagadek</h1>
-  </div>
-</header>
-
-<nav>
-  <div class="container">
+  <h1>Kategorie Zagadek</h1>
+  <nav>
     <ul>
       <li><a href="index.html">Strona główna</a></li>
       <li><a href="categories.html">Kategorie</a></li>
     </ul>
-  </div>
-</nav>
+  </nav>
+</header>
 
 <main>
-  <div class="container">
-    <section class="categories">
-      <h2>Odkryj Zagadki</h2>
-      <p>Wybierz kategorię i zmierz się z wyzwaniami, które czekają na Ciebie. Każda kategoria to nowa przygoda i okazja do zdobycia punktów!</p>
-      <ul class="category-list">
-        <li><a href="#">Gry</a></li>
-        <li><a href="#">Geografia</a></li>
-        <li><a href="#">Muzyka</a></li>
-        <li><a href="#">Filmy</a></li>
-        <li><a href="#">Twitch</a></li>
-        <!-- Możesz dodać więcej kategorii tutaj -->
+  <section>
+    <h2>Przeglądaj nasze zagadki według kategorii</h2>
+    <div class="category-list">
+      <ul>
+        <li>Anime</li>
+        <li>Astronomia</li>
+        <li>Bloodborne</li>
+        <li>CS:GO</li>
+        <li>Cyberpunk 2077</li>
+        <li>Dragon Ball</li>
+        <li>The Elder Scrolls</li>
+        <li>F1</li>
+        <li>Filmy</li>
+        <li>Geografia</li>
+        <li>Gothic</li>
+        <li>Gry</li>
+        <li>Gwiezdne Wojny</li>
+        <li>Historia</li>
+        <li>Kreskówki</li>
+        <li>League of Legends</li>
+        <li>Matematyka</li>
+        <li>Militaria</li>
+        <li>Minecraft</li>
+        <li>Motoryzacja</li>
+        <li>Muzyka</li>
+        <li>Piłka Nożna</li>
+        <li>Pokemony</li>
+        <li>Programowanie</li>
+        <li>Siatkówka</li>
+        <li>Sport</li>
+        <li>Technologia</li>
+        <li>Twitch</li>
+        <li>World of Tanks</li>
+        <li>Zagadki</li>
+        <li>Zwierzęta</li>
       </ul>
-    </section>
-  </div>
+    </div>
+  </section>
 </main>
 
 <footer>
-  <div class="container">
-    <p>&copy; 2023 ChatAdvert. Wszystkie prawa zastrzeżone.</p>
-  </div>
+  <p>&copy; 2023 ChatAdvert. Wszelkie prawa zastrzeżone.</p>
 </footer>
 </body>
 </html>
