--- a/categories.html
+++ b/categories.html
@@ -20,6 +20,7 @@
     <main>
         <section class="container">
             <h2>Zaznacz interesujące Cię kategorie i wklej kod na czacie Twitch</h2>
+            <h2>Pamiętaj że musisz wybrać minimum 5, inaczej zostaną przydzielone Ci losowe kategorie.</h2>
             <div class="category-input">
                 <input type="text" id="commandOutput" placeholder="Wybrane kategorie pojawią się tutaj..." readonly>
             </div>
