--- a/categories.html
+++ b/categories.html
@@ -26,37 +26,37 @@
             </div>
             <div class="category-buttons">
                 <!-- Przyciski kategorii -->
-                <button class="category-btn" data-category="Anime">Anime</button>
-                <button class="category-btn" data-category="Astronomia">Astronomia</button>
-                <button class="category-btn" data-category="Bloodborne">Bloodborne</button>
-                <button class="category-btn" data-category="CSGO">CS:GO</button>
-                <button class="category-btn" data-category="Cyberpunk2077">Cyberpunk 2077</button>
-                <button class="category-btn" data-category="DragonBall">Dragon Ball</button>
-                <button class="category-btn" data-category="TheElderScrolls">The Elder Scrolls</button>
-                <button class="category-btn" data-category="F1">F1</button>
-                <button class="category-btn" data-category="Filmy">Filmy</button>
-                <button class="category-btn" data-category="Geografia">Geografia</button>
-                <button class="category-btn" data-category="Gothic">Gothic</button>
-                <button class="category-btn" data-category="Gry">Gry</button>
-                <button class="category-btn" data-category="GwiezdneWojny">Gwiezdne Wojny</button>
-                <button class="category-btn" data-category="Historia">Historia</button>
-                <button class="category-btn" data-category="Kreskowki">Kreskówki</button>
-                <button class="category-btn" data-category="LeagueofLegends">League of Legends</button>
-                <button class="category-btn" data-category="Matematyka">Matematyka</button>
-                <button class="category-btn" data-category="Militaria">Militaria</button>
-                <button class="category-btn" data-category="Minecraft">Minecraft</button>
-                <button class="category-btn" data-category="Motoryzacja">Motoryzacja</button>
-                <button class="category-btn" data-category="Muzyka">Muzyka</button>
-                <button class="category-btn" data-category="PilkaNozna">Piłka Nożna</button>
-                <button class="category-btn" data-category="Pokemony">Pokemony</button>
-                <button class="category-btn" data-category="Programowanie">Programowanie</button>
-                <button class="category-btn" data-category="Siatkowka">Siatkówka</button>
-                <button class="category-btn" data-category="Sport">Sport</button>
-                <button class="category-btn" data-category="Technologia">Technologia</button>
-                <button class="category-btn" data-category="Twitch">Twitch</button>
-                <button class="category-btn" data-category="WorldofTanks">World of Tanks</button>
-                <button class="category-btn" data-category="Zagadki">Zagadki</button>
-                <button class="category-btn" data-category="Zwierzeta">Zwierzęta</button>
+                <button class="category-btn" data-category="anime">Anime</button>
+                <button class="category-btn" data-category="astronomia">Astronomia</button>
+                <button class="category-btn" data-category="bloodborne">Bloodborne</button>
+                <button class="category-btn" data-category="csgo">CS:GO</button>
+                <button class="category-btn" data-category="cyberpunk2077">Cyberpunk 2077</button>
+                <button class="category-btn" data-category="dragonball">Dragon Ball</button>
+                <button class="category-btn" data-category="elderscrolls">The Elder SCrolls</button>
+                <button class="category-btn" data-category="f1">F1</button>
+                <button class="category-btn" data-category="filmy">Filmy</button>
+                <button class="category-btn" data-category="geografia">Geografia</button>
+                <button class="category-btn" data-category="gothic">Gothic</button>
+                <button class="category-btn" data-category="gry">Gry</button>
+                <button class="category-btn" data-category="gwiezdnewojny">Gwiezdne Wojny</button>
+                <button class="category-btn" data-category="historia">Historia</button>
+                <button class="category-btn" data-category="kreskowki">Kreskówki</button>
+                <button class="category-btn" data-category="leagueoflegends">League of Legends</button>
+                <button class="category-btn" data-category="matematyka">Matematyka</button>
+                <button class="category-btn" data-category="militaria">Militaria</button>
+                <button class="category-btn" data-category="minecraft">Minecraft</button>
+                <button class="category-btn" data-category="motoryzacja">Motoryzacja</button>
+                <button class="category-btn" data-category="muzyka">Muzyka</button>
+                <button class="category-btn" data-category="pilkanozna">Piłka Nożna</button>
+                <button class="category-btn" data-category="pokemony">Pokemony</button>
+                <button class="category-btn" data-category="programowanie">Programowanie</button>
+                <button class="category-btn" data-category="siatkowka">Siatkówka</button>
+                <button class="category-btn" data-category="sport">Sport</button>
+                <button class="category-btn" data-category="technologia">Technologia</button>
+                <button class="category-btn" data-category="twitch">Twitch</button>
+                <button class="category-btn" data-category="worldoftanks">World of Tanks</button>
+                <button class="category-btn" data-category="zagadki">Zagadki</button>
+                <button class="category-btn" data-category="zwierzeta">Zwierzęta</button>
             </div>
         </section>
     </main>
