--- a/categories.html
+++ b/categories.html
@@ -32,7 +32,7 @@
                 <button class="category-btn" data-category="csgo">CS:GO</button>
                 <button class="category-btn" data-category="cyberpunk2077">Cyberpunk 2077</button>
                 <button class="category-btn" data-category="dragonball">Dragon Ball</button>
-                <button class="category-btn" data-category="elderscrolls">The Elder SCrolls</button>
+                <button class="category-btn" data-category="elderscrolls">The Elder Scrolls</button>
                 <button class="category-btn" data-category="f1">F1</button>
                 <button class="category-btn" data-category="filmy">Filmy</button>
                 <button class="category-btn" data-category="geografia">Geografia</button>
