--- a/index.html
+++ b/index.html
@@ -6,56 +6,7 @@
 <title>ChatAdvert - Twoja Interakcja, Naszą Pasją</title>
 <link rel="stylesheet" href="styles.css">
 <style>
-  body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-  }
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem 0;
-    text-align: center;
-  }
-  nav ul {
-    list-style: none;
-    padding: 0;
-  }
-  nav ul li {
-    display: inline;
-    margin-right: 20px;
-  }
-  nav a {
-    text-decoration: none;
-    color: #fff;
-  }
-  main {
-    padding: 2rem;
-  }
-  footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1rem 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-  .container {
-    max-width: 1200px;
-    margin: auto;
-    overflow: auto;
-  }
-  .card {
-    background: #fff;
-    margin-bottom: 2rem;
-    padding: 1rem;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  .card h3 {
-    color: #333;
-  }
+  /* (style content unchanged) */
 </style>
 </head>
 <body>
@@ -68,7 +19,7 @@
   <div class="container">
     <ul>
       <li><a href="index.html">Strona główna</a></li>
-      <li><a href="categories.html">Kategorie</a></li> <!-- Nowa zakładka -->
+      <li><a href="categories.html">Kategorie</a></li>
     </ul>
   </div>
 </nav>
@@ -80,25 +31,36 @@
       <p>ChatAdvert to innowacyjne rozwiązanie dla streamerów Twitch, które ułatwia interakcję z publicznością i automatyzuje zarządzanie czatem. Nasz bot wykorzystuje zaawansowane algorytmy, aby zapewnić niezapomniane doświadczenia dla Ciebie i Twoich widzów.</p>
     </section>
 
+    <!-- Start of new content -->
     <section class="card">
-      <h3>Komendy Czatu</h3>
-      <p>Uprość zarządzanie Twoim kanałem dzięki intuicyjnym komendom czatu. Pozwól widzom sprawdzić swoje punkty, użyć komendy zagadki lub odebrać codzienne nagrody - wszystko za pomocą prostych komend tekstowych.</p>
-    </section>
+      <h3>Dostępne Komendy Czatu</h3>
+      <dl>
+        <dt>!point</dt>
+        <dd>Sprawdź swoją ilość punktów w dowolnym momencie, aby zobaczyć, ile udało Ci się zebrać. Punkty zdobywasz za aktywność na czacie, rozwiązywanie zagadek oraz uczestnictwo w różnych interakcjach.</dd>
 
-    <section class="card">
-      <h3>Interaktywne Zagadki</h3>
-      <p>Zaangażuj swoich widzów dzięki różnorodnym zagadkom, które mogą rozwiązywać na żywo. Z kategorii takich jak gry, geografia, muzyka, filmy i wiele innych, każdy znajdzie coś dla siebie.</p>
-    </section>
+        <dt>!zagadka</dt>
+        <dd>Kiedy użyjesz tej komendy, bot zadaje losową zagadkę z wybranej przez Ciebie kategorii. Rozwiąż zagadkę i zdobądź punkty, które możesz wymieniać na nagrody w sklepie. Każda poprawna odpowiedź to zwiększenie swoich punktów!</dd>
 
-    <section class="card">
-      <h3>System Punktów</h3>
-      <p>Nagradzaj swoich widzów za ich aktywność i lojalność. Punkty mogą być wymieniane na ekskluzywne nagrody lub ulepszenia na czacie.</p>
-    </section>
+        <dt>!daily</dt>
+        <dd>Odbierz codzienne punkty za regularne wizyty na czacie. To świetny sposób na rozpoczęcie dnia i zwiększenie swoich szans w rankingu widzów. Pamiętaj, aby codziennie wracać po więcej!</dd>
 
-    <section class="card">
-      <h3>Codzienna Nagroda</h3>
-      <p>Stały dopływ nagród utrzymuje widzów w stałym zaangażowaniu. Codzienna nagroda to doskonały sposób na utrzymanie stałej interakcji.</p>
+        <dt>!shop</dt>
+        <dd>Przejrzyj listę przedmiotów dostępnych w sklepie bota. Znajdziesz tu różnorodne nagrody, od ulepszeń na czacie po ekskluzywne emotikony i inne niespodzianki.</dd>
+
+        <dt>!sbuy [numer]</dt>
+        <dd>Gdy znajdziesz coś, co Ci się podoba w sklepie, użyj tej komendy, aby dokonać zakupu. Po prostu wpisz !sbuy, a następnie numer przedmiotu, który chcesz nabyć. Upewnij się, że masz wystarczającą ilość punktów!</dd>
+
+        <dt>!status</dt>
+        <dd>Zastanawiasz się, na jakim jesteś poziomie w hierarchii bota? Użyj tej komendy, aby dowiedzieć się o swoim statusie. Im wyższy poziom, tym większe przywileje i lepsze nagrody.</dd>
+
+        <dt>!kategorie</dt>
+        <dd>Zarządzaj swoimi preferowanymi kategoriami zagadek. Jeśli lubisz określone tematy, ta komenda pozwoli Ci dostosować zagadki do Twoich zainteresowań, zwiększając tym samym Twoją szansę na wygraną.</dd>
+      </dl>
     </section>
+    <!-- End of new content -->
+
+    <!-- Removed old content -->
+
   </div>
 </main>
 
