--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       
       <div class="command-description">
         <dt>!shop</dt>
-        <dd>Przejrzyj listę przedmiotów dostępnych w sklepie bota. Znajdziesz tu różnorodne nagrody, od ulepszeń na czacie po ekskluzywne emotikony i inne niespodzianki.</dd>
+        <dd>Przejrzyj listę przedmiotów dostępnych w sklepie bota. Znajdziesz tu różnorodne nagrody, od ulepszeń na czacie po ekskluzywne emotikony i inne niespodzianki. W sklepie możesz kupić premium ktore daje 2x więcej punktów z zagadek, timeout wybranej osoby na 15min albo lootbox'a w którym możesz zgarnać losową ilość punktów czy nawet premium na miesiąc.</dd>
       </div>
       
       <div class="command-description">
