--- a/categories.html
+++ b/categories.html
@@ -29,12 +29,14 @@
                 <button class="category-btn" data-category="anime">Anime</button>
                 <button class="category-btn" data-category="astronomia">Astronomia</button>
                 <button class="category-btn" data-category="bloodborne">Bloodborne</button>
+                <button class="category-btn" data-category="chemia">Chemia</button>
                 <button class="category-btn" data-category="csgo">CS:GO</button>
                 <button class="category-btn" data-category="cyberpunk2077">Cyberpunk 2077</button>
                 <button class="category-btn" data-category="dragonball">Dragon Ball</button>
                 <button class="category-btn" data-category="elderscrolls">The Elder Scrolls</button>
                 <button class="category-btn" data-category="f1">F1</button>
                 <button class="category-btn" data-category="filmy">Filmy</button>
+                <button class="category-btn" data-category="fizyka">Fizyka</button>
                 <button class="category-btn" data-category="geografia">Geografia</button>
                 <button class="category-btn" data-category="gothic">Gothic</button>
                 <button class="category-btn" data-category="gry">Gry</button>
@@ -52,10 +54,10 @@
                 <button class="category-btn" data-category="programowanie">Programowanie</button>
                 <button class="category-btn" data-category="siatkowka">Siatkówka</button>
                 <button class="category-btn" data-category="sport">Sport</button>
-                <button class="category-btn" data-category="technologia">Technologia</button>
+                <button class="category-btn" data-category="technologia">Technologia Informacyjna</button>
                 <button class="category-btn" data-category="twitch">Twitch</button>
                 <button class="category-btn" data-category="worldoftanks">World of Tanks</button>
-                <button class="category-btn" data-category="zagadki">Zagadki</button>
+                <button class="category-btn" data-category="zagadki">Zagadki Logiczne</button>
                 <button class="category-btn" data-category="zwierzeta">Zwierzęta</button>
             </div>
         </section>
